--- a/RecursionCall/.project
+++ b/RecursionCall/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>VendingMachine1</name>
+	<name>RecursionCall</name>
 	<comment></comment>
 	<projects>
 	</projects>
